' @compare_tag Process-ClassDiagram v0.1
@startuml
title FeatureDetector Process Class Diagram

namespace fast::rf {
  namespace DiagnosticDefinition {
    enum DiagnosticType
  }
  namespace messages {
    namespace InfrastructureMsgs {
      class DiagnosticMsg <<(M,#FFFF00)>>
      class ReadyToArmStatusMsg <<(M,#FFFF00)>>
    }
  }
  namespace core::Infrastructure {
    class DiagnosticManager
  }
  interface IProcess
  namespace PerceptionSystem {
    namespace DepthCameraPipelineSubsystem {
      package FeatureDetector #LightYellow;line:blue {

        interface IFeatureDetectorProcess  {
          +{abstract} bool init()
        }
        IFeatureDetectorProcess -up-|> IProcess
        abstract BaseFeatureDetectorProcess {
          +DiagnosticMsg[] getDiagnostics()
          +bool updateDiagnostic(DiagnosticType type, Level level, DiagnosticMessage message, string description)
          +ReadyToArmStatusMsg get_ready_to_arm()
          #bool update(double current_time_sec)
          #string pretty()
          #DiagnosticManager m_diagnosticManager
          #ReadyToArmStatusMsg ready_to_arm

        }
        BaseFeatureDetectorProcess .up.|> IFeatureDetectorProcess
        BaseFeatureDetectorProcess --> DiagnosticManager: <<use>>
        class BasicFeatureDetectorProcessConfig {
          +bool is_ok()
          +string pretty()
        }
        class BasicFeatureDetectorProcess {
          +bool init()
          +bool set_config(BasicFeatureDetectorProcessConfig config)
          +bool update(double current_time_sec)
	  +string pretty()
          -BasicFeatureDetectorProcessConfig config_
        }
        BasicFeatureDetectorProcess -up-|> BaseFeatureDetectorProcess
        BasicFeatureDetectorProcess *-> BasicFeatureDetectorProcessConfig: <<use>>
        class DummyFeatureDetectorProcess {
          +bool update(double current_time_sec)
        }
        DummyFeatureDetectorProcess -up-|> BaseFeatureDetectorProcess
      }
    }
  }
}
@enduml
